fix: filter-options overlaping removed, drop-down height increased

--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,6 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
   background-color: #3397DB;
   align-items: center;
 }
@@ -121,8 +120,8 @@ nav h1 a {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
-  font-size: 11pt;
-  height: 35px;
+  font-size: 12pt;
+  height: 40px;
   letter-spacing: 0;
   margin: 10px;
   padding: 0 10px;
